# Visual-Computer-assignment-2

./: README.md
Assignment2/: .gitignore  CMakeLists.txt  README.md
Assignment2/common/: Camera.hpp  Object.cpp  Object.hpp  Quad.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureShader.cpp  TextureShader.hpp  Triangle.hpp
Assignment2/common/filters/: CPUFilters.cpp  CPUFilters.hpp
Assignment2/source/: debugUV.frag  pixelate.frag  sincity.frag  videoTextureShader.frag  videoTextureShader.vert  webcamQuad.cpp
